# Code-Analyzer

./: .gitignore  README.md  analysis_summary.md  pyproject.toml  requirements.txt  setup.py
.analyzer_rag/: chroma.sqlite3
analyzer/: __init__.py  api.py  cli.py  config.py  engine.py  exceptions.py  logging_config.py  menu.py  utils.py
analyzer/ai/: __init__.py  formatters.py  query_interface.py  summarizer.py
analyzer/dependencies/: __init__.py  call_graph.py  import_analyzer.py  module_graph.py
analyzer/metrics/: __init__.py  complexity.py  halstead.py  loc.py  maintainability.py
analyzer/models/: __init__.py  code_entities.py  graphs.py  metrics.py
analyzer/parsers/: __init__.py  base.py  file_parser.py  python_parser.py
analyzer/patterns/: __init__.py  anti_patterns.py  code_smells.py  dead_code.py  design_patterns.py  duplicates.py
analyzer/rag/: __init__.py  chunker.py  config.py  demo_data.py  embeddings.py  llm_provider.py  pipeline.py  prompts.py  retriever.py  vector_store.py
analyzer/security/: __init__.py  secrets_detector.py  vulnerability_scanner.py
tests/: conftest.py  test_integration.py  test_metrics.py  test_parsers.py  test_rag.py
